--- a/stack.yaml
+++ b/stack.yaml
@@ -41,7 +41,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 extra-deps:
-- cabal-helper-0.7.3.0
+#- cabal-helper-0.7.3.0
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
@@ -65,4 +65,4 @@ extra-deps:
 #
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
-allow-newer: true
+#allow-newer: true
